package models;

import java.util.List;

public class Cliente {

    private int id;
    private String nome;
    private String email;
    private List<Pedido> pedidos;
}
