package models;

public class ItemPedido {

    private int quantidade;
    private double subtotal;
    private Produto produto;
}
