package models;

public class PagamentoBoleto extends Pagamento {

    @Override
    public void pagar() {
        System.out.println("Pagamento realizado com boleto");
    }
}
